--- a/package.json
+++ b/package.json
@@ -34,6 +34,23 @@
     "@babel/core": "^7.26.0",
     "@babel/plugin-transform-export-namespace-from": "^7.25.9",
     "@babel/plugin-transform-modules-commonjs": "^7.25.9",
+    "@effect-rx/rx-react": "0.37.0",
+    "@effect/ai": "0.20.0",
+    "@effect/ai-anthropic": "0.10.0",
+    "@effect/ai-openai": "0.23.0",
+    "@effect/cli": "0.65.0",
+    "@effect/cluster": "0.40.0",
+    "@effect/eslint-plugin": "0.3.2",
+    "@effect/experimental": "0.50.0",
+    "@effect/language-service": "0.21.8",
+    "@effect/opentelemetry": "0.52.0",
+    "@effect/platform": "0.84.1",
+    "@effect/platform-browser": "0.66.0",
+    "@effect/platform-node": "0.87.0",
+    "@effect/rpc": "0.63.0",
+    "@effect/sql": "0.39.0",
+    "@effect/sql-pg": "0.40.0",
+    "@effect/vitest": "0.23.9",
     "@eslint/compat": "1.2.2",
     "@eslint/eslintrc": "3.1.0",
     "@eslint/js": "9.13.0",
@@ -42,6 +59,8 @@
     "@typescript-eslint/parser": "8.14.0",
     "@vitest/coverage-v8": "2.1.9",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
+    "dotenv-cli": "8.0.0",
+    "effect": "3.16.1",
     "eslint": "9.13.0",
     "eslint-import-resolver-typescript": "^3.10.0",
     "eslint-plugin-codegen": "^0.29.0",
@@ -62,34 +81,16 @@
     "read-package-up": "11.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.8.2",
-    "vitest": "3.1.1",
-    "effect": "3.16.1",
-    "@effect/platform": "0.86.0",
-    "@effect/platform-browser": "0.66.0",
-    "@effect/platform-node": "0.87.0",
-    "@effect/experimental": "0.50.0",
-    "@effect/opentelemetry": "0.52.0",
-    "@effect/cluster": "0.40.0",
-    "@effect/sql": "0.39.0",
-    "@effect/sql-pg": "0.40.0",
-    "@effect/eslint-plugin": "0.3.2",
-    "@effect/language-service": "0.21.8",
-    "@effect/vitest": "0.23.9",
-    "@effect/rpc": "0.63.0",
-    "@effect/ai": "0.20.0",
-    "@effect/ai-openai": "0.23.0",
-    "@effect/ai-anthropic": "0.10.0",
-    "@effect-rx/rx-react": "0.37.0",
-    "@effect/cli": "0.65.0"
+    "vitest": "3.1.1"
   },
   "pnpm": {
     "overrides": {
       "vitest": "^2.0.5",
-      "effect": "3.16.1",
-      "@effect/platform": "0.84.1",
-      "@effect/platform-browser": "0.64.1",
-      "@effect/platform-node": "0.83.1",
-      "@effect/experimental": "0.48.1",
+      "effect": "3.16.12",
+      "@effect/platform": "0.87.11",
+      "@effect/platform-browser": "0.67.11",
+      "@effect/platform-node": "0.89.3",
+      "@effect/experimental": "0.51.12",
       "@effect/opentelemetry": "0.50.1",
       "@effect/cluster": "0.36.1",
       "@effect/sql": "0.37.1",
