--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
+
     "exactOptionalPropertyTypes": true,
     "moduleDetection": "force",
     "composite": true,
@@ -35,7 +36,11 @@
     "module": "NodeNext",
     "incremental": true,
     "removeComments": false,
-    "plugins": [{ "name": "@effect/language-service" }],
+    "plugins": [
+      {
+        "name": "@effect/language-service"
+      }
+    ],
     "paths": {
       "@org/domain": ["./packages/domain/src/index.js"],
       "@org/domain/*": ["./packages/domain/src/*.js"],
@@ -45,7 +50,8 @@
       "@org/server/test/*": ["./packages/server/test/*.js"],
       "@org/database": ["./packages/database/src/index.js"],
       "@org/database/*": ["./packages/database/src/*.js"],
-      "@org/database/test/*": ["./packages/database/test/*.js"]
+      "@org/database/test/*": ["./packages/database/test/*.js"],
+      "@/components/*": ["src/components/*.js"]
     }
   }
 }
