--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,39 +24,34 @@
     "@effect/platform-browser": "*",
     "@effect/rpc": "*",
     "@headlessui/react": "^2.2.1",
+    "@heroicons/react": "^2.2.0",
+    "@mantine/core": "^8.1.3",
+    "@mantine/dates": "^8.1.3",
+    "@mantine/hooks": "^8.1.3",
     "@org/domain": "workspace:^",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-tooltip": "^1.1.8",
-    "@tailwindcss/typography": "^0.5.16",
-    "@tanstack/react-form": "1.2.2",
-    "@tanstack/react-router": "^1.102.1",
+    "@tabler/icons-react": "^3.34.0",
+    "@tanstack/react-form": "^1.11.3",
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query-devtools": "^5.81.5",
+    "@tanstack/react-router": "^1.124.0",
+    "@tanstack/react-router-devtools": "^1.124.0",
     "@tanstack/react-store": "^0.7.0",
     "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "effect": "*",
     "lucide-react": "^0.475.0",
+    "mantine-react-table": "2.0.0-beta.9",
     "motion": "^12.18.1",
+    "openapi-fetch": "^0.14.0",
+    "openapi-react-query": "^0.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "sonner": "^2.0.1",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "sonner": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@tailwindcss/vite": "4.0.4",
     "@tanstack/router-plugin": "^1.102.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
