--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -43,10 +43,15 @@
     "@effect/rpc": "*",
     "@effect/sql": "*",
     "@effect/sql-pg": "*",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.57.1",
+    "@opentelemetry/exporter-logs-otlp-grpc": "*",
+    "@opentelemetry/exporter-logs-otlp-http": "*",
+    "@opentelemetry/exporter-trace-otlp-grpc": "*",
+    "@opentelemetry/exporter-trace-otlp-http": "*",
     "@opentelemetry/resources": "*",
+    "@opentelemetry/sdk-logs": "*",
     "@opentelemetry/sdk-trace-base": "*",
     "@opentelemetry/sdk-trace-node": "*",
+    "@opentelemetry/sdk-trace-web": "*",
     "@opentelemetry/semantic-conventions": "*",
     "@org/database": "workspace:^",
     "@org/domain": "workspace:^",
