--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -23,11 +23,13 @@
     "@effect/platform": "*",
     "@effect/platform-browser": "*",
     "@effect/rpc": "*",
+    "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
     "@mantine/core": "^8.1.3",
     "@mantine/dates": "^8.1.3",
     "@mantine/hooks": "^8.1.3",
+    "@mui/icons-material": "^7.2.0",
     "@org/domain": "workspace:^",
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/react-form": "^1.11.3",
@@ -46,8 +48,9 @@
     "motion": "^12.18.1",
     "openapi-fetch": "^0.14.0",
     "openapi-react-query": "^0.5.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-lineicons": "^3.0.0",
     "sonner": "^2.0.1"
   },
   "devDependencies": {
@@ -55,8 +58,8 @@
     "@tanstack/router-plugin": "^1.102.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
