--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@azure/cosmos": "^4.4.1",
     "@effect/ai": "*",
     "@effect/ai-anthropic": "*",
     "@effect/ai-openai": "*",
